# Electricity

./: .gitignore  main.py  pyproject.toml
Analize/: AED.ipynb  aed_2022.ipynb  utils.py
Data/: telegram.py
Data/EmpresaElectricaDeLaHabana/2022/: mensajes_EmpresaElectricaDeLaHabana_2022-08.json  mensajes_EmpresaElectricaDeLaHabana_2022-09.json  mensajes_EmpresaElectricaDeLaHabana_2022-10.json  mensajes_EmpresaElectricaDeLaHabana_2022-11.json  mensajes_EmpresaElectricaDeLaHabana_2022-12.json
Data/EmpresaElectricaDeLaHabana/2023/: mensajes_EmpresaElectricaDeLaHabana_2023-01.json  mensajes_EmpresaElectricaDeLaHabana_2023-02.json  mensajes_EmpresaElectricaDeLaHabana_2023-03.json  mensajes_EmpresaElectricaDeLaHabana_2023-04.json  mensajes_EmpresaElectricaDeLaHabana_2023-05.json  mensajes_EmpresaElectricaDeLaHabana_2023-06.json  mensajes_EmpresaElectricaDeLaHabana_2023-07.json  mensajes_EmpresaElectricaDeLaHabana_2023-08.json  mensajes_EmpresaElectricaDeLaHabana_2023-09.json  mensajes_EmpresaElectricaDeLaHabana_2023-10.json  mensajes_EmpresaElectricaDeLaHabana_2023-11.json  mensajes_EmpresaElectricaDeLaHabana_2023-12.json
Data/EmpresaElectricaDeLaHabana/2024/: mensajes_EmpresaElectricaDeLaHabana_2024-01.json  mensajes_EmpresaElectricaDeLaHabana_2024-02.json  mensajes_EmpresaElectricaDeLaHabana_2024-03.json  mensajes_EmpresaElectricaDeLaHabana_2024-04.json  mensajes_EmpresaElectricaDeLaHabana_2024-05.json  mensajes_EmpresaElectricaDeLaHabana_2024-06.json  mensajes_EmpresaElectricaDeLaHabana_2024-07.json  mensajes_EmpresaElectricaDeLaHabana_2024-08.json  (+4 more)
(+13 files in other folders)
